# redirect-service/internal/handler/redirect_handler.go
@@ -28,26 +28,26 @@ func NewRedirectHandler(
 }
 
 // Redirect returns the original URL without redirecting
-// @Summary Get original URL from short code
+// @Summary Get original URL from short url
 // @Description Returns the original URL information without performing a redirect
 // @Tags Redirect
 // @Accept json
 // @Produce json
-// @Param shortCode path string true "Short Code"
+// @Param shortUrl path string true "Short Url"
 // @Success 200 {object} dto.Response{data=dto.RedirectResponse}
 // @Failure 404 {object} dto.Response
-// @Router /r/{shortCode} [get]
+// @Router /r/{shortUrl} [get]
 func (h *RedirectHandler) Redirect(c *gin.Context) {
-	shortCode := c.Param("shortCode")
+	shortUrl := c.Param("shortUrl")
 
-	if shortCode == "" {
-		dto.ErrorResponse(c, http.StatusBadRequest, "Short code is required", nil)
+	if shortUrl == "" {
+		dto.ErrorResponse(c, http.StatusBadRequest, "Short url is required", nil)
 		return
 	}
 
-	url, err := h.redirectService.GetURL(c.Request.Context(), shortCode)
+	url, err := h.redirectService.GetURL(c.Request.Context(), shortUrl)
 	if err != nil {
-		log.Printf("❌ Failed to get URL for shortCode %s: %v", shortCode, err)
+		log.Printf("❌ Failed to get URL for shortUrl %s: %v", shortUrl, err)
 
 		// Handle specific errors dengan HTTP status yang sesuai
 		if errors.Is(err, repository.ErrURLExpired) {
@@ -69,8 +69,13 @@ func (h *RedirectHandler) Redirect(c *gin.Context) {
 
 	go func() {
 		ctx := context.Background()
-		if err := h.clickEventService.TrackClick(ctx, c, shortCode); err != nil {
-			log.Printf("⚠️  Failed to track click for shortCode %s: %v", shortCode, err)
+
+		if err := h.redirectService.IncrementClickCount(ctx, shortUrl); err != nil {
+			log.Printf("⚠️  Failed to increment click count for shortUrl %s: %v", shortUrl, err)
+		}
+
+		if err := h.clickEventService.TrackClick(ctx, c, shortUrl); err != nil {
+			log.Printf("⚠️  Failed to track click for shortUrl %s: %v", shortUrl, err)
 		}
 	}()
 
@@ -84,10 +89,10 @@ func (h *RedirectHandler) Redirect(c *gin.Context) {
 // GetURLInfo returns URL information without redirecting
 // @Summary Get URL information
 // @Tags Redirect
-// @Param shortCode path string true "Short Code"
+// @Param shortCode path string true "Short Url"
 // @Success 200 {object} dto.Response
 // @Failure 404 {object} dto.Response
-// @Router /api/info/{shortCode} [get]
+// @Router /api/info/{shortUrl} [get]
 func (h *RedirectHandler) GetURLInfo(c *gin.Context) {
 	shortCode := c.Param("shortCode")
 
